--- a/frontend/src/styles/AdminDonationManagement.css
+++ b/frontend/src/styles/AdminDonationManagement.css
@@ -2,7 +2,7 @@
 .A12345678Z {
     display: flex;
     background: #f4f4f4;
-    height: 100vh;
+    height: 100%;
     font-family: Arial, sans-serif;
 }
 
