--- a/frontend/src/styles/DonationPage.css
+++ b/frontend/src/styles/DonationPage.css
@@ -3,7 +3,7 @@
 .a12345b67890 {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: #f5f7fa;
   }
   
